--- a/src/gui/styles/emerald.qss
+++ b/src/gui/styles/emerald.qss
@@ -182,3 +182,29 @@ QComboBox {
     padding: 6px 10px;
     color: #C9D1D9;
 }
+
+/* Table Widget */
+QTableWidget {
+    background-color: #0D1117;
+    border: 1px solid #30363D;
+    color: #C9D1D9;
+    gridline-color: #30363D;
+    border-radius: 6px;
+}
+
+QTableWidget::item {
+    padding: 5px;
+}
+
+QHeaderView::section {
+    background-color: #161B22;
+    color: #8B949E;
+    padding: 5px;
+    border: 1px solid #30363D;
+    font-weight: bold;
+}
+
+QTableCornerButton::section {
+    background-color: #161B22;
+    border: 1px solid #30363D;
+}
